<resources>
    <string name="app_name">ProHelmetApp</string>
    <string name="prohelmet_alpha">ProHelmet, alpha v0.1, DEMO SOFTWARE</string>
    <string name="connect_str">Connect!</string>
    <string name="status_disconnected_str">Status: disconnected</string>
    <string name="status_connected_str">Status: connected</string>
    <string name="status_connecting_str">Status: connecting...</string>
    <string name="status_failed_str">Status: connection failed</string>
    <string name="test_1">Test 1</string>
    <string name="_0_0_km_h">GPS: 0.0 km/h</string>
    <string name="textview">TextView</string>
    <string name="msg_1">Msg 1</string>
    <string name="msg_2">Msg 2</string>
    <string name="nav_1">NAV 1</string>
    <string name="speed_rnd">SPEED RND</string>
    <string name="msg_3">MSG 3</string>
    <string name="nav_2">NAV 2</string>
</resources>
